# bitcoin-pocket-node

./: .gitignore  LICENSE  PLAN.md  README.md  build.gradle.kts  gradlew  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/pocketnode/: BitcoinPocketNodeApplication.kt  MainActivity.kt
app/src/main/java/com/pocketnode/mempool/: GbtGenerator.kt  GbtResult.kt  MempoolEntry.kt  MempoolService.kt  ThreadAcceleration.kt  ThreadTransaction.kt
app/src/main/java/com/pocketnode/network/: NetworkMonitor.kt
app/src/main/java/com/pocketnode/notifications/: TransactionNotificationManager.kt
app/src/main/java/com/pocketnode/oracle/: UTXOracle.kt
app/src/main/java/com/pocketnode/rpc/: BitcoinRpcClient.kt  RpcConfig.kt  RpcConfigDefaults.kt
app/src/main/java/com/pocketnode/service/: BatteryMonitor.kt  BitcoindService.kt  BwtService.kt  SyncController.kt
app/src/main/java/com/pocketnode/snapshot/: BlockFilterManager.kt  ChainstateManager.kt  NodeConnectionManager.kt  NodeSetupManager.kt  SnapshotDownloader.kt  SnapshotManager.kt
app/src/main/java/com/pocketnode/ssh/: SshUtils.kt
app/src/main/java/com/pocketnode/storage/: WatchListManager.kt
app/src/main/java/com/pocketnode/ui/: BlockFilterUpgradeScreen.kt  ChainstateCopyScreen.kt  ConnectWalletScreen.kt  (+12 more)
app/src/main/res/drawable/: ic_bitcoin_notification.xml  widget_background.xml  widget_indicator_circle.xml
app/src/main/res/layout/: widget_mempool.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: mempool_widget_info.xml
app/src/main/rust/: CMakeLists.txt
app/src/main/rust/gbt/: Cargo.toml
app/src/main/rust/gbt/src/: audit_transaction.rs  gbt.rs  lib.rs  thread_acceleration.rs  thread_transaction.rs  u32_hasher_types.rs
docs/: BIP110-RESEARCH.md  BLOCK-FILTER-DESIGN.md  DESKTOP-PORT.md  LDK-RESEARCH.md  VERSION-SELECTION.md  WATCHTOWER-MESH.md  build-android-arm64.md  chainparams-patch.md  chainstate-copy-presentation.html  cross-compilation-research.md  direct-chainstate-copy.md  emulator-testing.md  snapshot-testing.md  umbrel-integration.md
ndk-wrappers/: aarch64-linux-android-ar  aarch64-linux-android-g++  aarch64-linux-android-gcc  aarch64-linux-android-ld  aarch64-linux-android-nm  aarch64-linux-android-objcopy  aarch64-linux-android-objdump  aarch64-linux-android-ranlib  aarch64-linux-android-readelf  aarch64-linux-android-strip
scripts/: prepare-assets.sh
(+17 files in other folders)
